
--Fixed so that filtering for /DIESEL ENGINE doesn't cause you to /DIE.
  Fixes #667




Server Fixes

--New food settings to ease new players into the difficulty of the game.  New
  players get slower food decrement time.  This bonus has a half life of 
  10 hours of playtime.  Does not affect tutorial players, who still get the 
  same "hard" food timing that the tutorial was designed for.





Version 356    2020-September-18

--Support for variable dummy objects that have numeral sprites which count up.

--Support for serial numbered variable dummy objects, where the next variable
  object is substituted for each new object created in the world.  (Example:
  sports cars with unique numbers on the side.)





Version 354    2020-September-11

--Support for containers with invisible contained items.

--Support for sprites (like words) that never flip when object flips in world.
 




Server Fixes

--Fixed crash when client sends chat string containing only invalid characters.



Version 352    2020-July-24

--Support for paging through items in Editor pickers with [ and ] keys.

--Shaved 13% off loading time by reducing repeat memory allocations when
  expanding transition bank and object bank with runtime-generated elements. 
  Also optimized a few other loading hotspots.  Fixes #661

--Shaved another 10% off loading time by optimizing inner loop of kerning
  calculation during font loading.

--Fixed appearance of certain held objects, and arm position, after flipping
  character to left or right with mouse movement.  Fixes #657

--Fixed endless looping behavior if custom server address includes a bad
  hostname that gets looked up as invalid instantly.  Fixes #662

--CTRL-right-click on object picker in object editor inserts other object above
  current sprite layer.

--Can now paste email into login form.  Fixes #649



Server Fixes

--Server converts all incoming client emails to lower case.  Fixes #659
